refcator: swagger doc
